Was removed IBlackJack. Was creeated class Deck. Were wrote methods BlackJack.StartGame,  Player.VeiwMyCard. Remove methods Player.TakeCard and BlackJack.SetStartDeck in class Deck (ChoseCard and Refresh).

--- a/Black_Jack/Black_Jack.csproj
+++ b/Black_Jack/Black_Jack.csproj
@@ -43,8 +43,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Models\Deck.cs" />
     <Compile Include="Models\BlackJack.cs" />
-    <Compile Include="Interfaces\IBlackJack.cs" />
     <Compile Include="Interfaces\IPlayer.cs" />
     <Compile Include="Models\Card.cs" />
     <Compile Include="Models\Player.cs" />
